// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AssetGallery 加载数据 1`] = `
<div>
  <div>
    <div
      style="padding: 0px 8px; display: flex; justify-content: space-between; align-items: center;"
    >
      <div />
      <div
        class="ant-space ant-space-horizontal ant-space-align-center"
      >
        <div
          class="ant-space-item"
          style="margin-right: 8px;"
        >
          <div
            class="ant-space ant-space-horizontal ant-space-align-center"
          >
            <div
              class="ant-space-item"
              style="margin-right: 0px;"
            >
              <button
                class="ant-btn ant-btn-link ant-btn-icon-only"
                data-testid="masonry-icon"
                type="button"
              >
                <img
                  alt="瀑布流布局"
                  src="https://gw.alipayobjects.com/zos/antfincdn/gACoIFWH4G/masonry.svg"
                  style="cursor: pointer;"
                />
              </button>
            </div>
            <div
              class="ant-space-item"
            >
              <button
                class="ant-btn ant-btn-link ant-btn-icon-only"
                data-testid="grid-icon"
                type="button"
              >
                <img
                  alt="网格布局"
                  src="https://gw.alipayobjects.com/zos/antfincdn/sLiHETRbAt/grid.svg"
                  style="cursor: pointer;"
                />
              </button>
            </div>
          </div>
        </div>
        <div
          class="ant-space-item"
        >
          <div
            class="ant-slider ant-slider-horizontal"
            style="width: 100px;"
          >
            <div
              class="ant-slider-rail"
            />
            <div
              class="ant-slider-track"
              style="left: 0%; width: 0%;"
            />
            <div
              class="ant-slider-step"
            />
            <div
              aria-disabled="false"
              aria-valuemax="-1"
              aria-valuemin="-4"
              aria-valuenow="-4"
              class="ant-slider-handle"
              role="slider"
              style="left: 0%; transform: translateX(-50%);"
              tabindex="0"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="avx-asset-gallery-container avx-asset-gallery-masonry"
      style="column-count: 4;"
    >
      <div
        class="avx-asset-card-wrapper"
      >
        <div
          class="ant-card avx-asset-card-item"
        >
          <div
            class="ant-card-cover"
          >
            <div
              class="avx-asset-card-image-ctn"
            >
              <div
                class="avx-asset-card-image-type"
              >
                <img
                  alt="sketch"
                  height="18"
                  src="https://gw.alipayobjects.com/zos/antfincdn/lBMmJ5U0Pr/svg.svg"
                  width="18"
                />
              </div>
              <img
                alt="渐变色 Logo"
                class="avx-asset-card-image"
                src="https://gw.alipayobjects.com/zos/antfincdn/LFmaI3%26OJh/logo.svg"
                style="padding: 12px;"
              />
            </div>
          </div>
          <div
            class="ant-card-body"
          >
            <div
              class="ant-card-meta"
            >
              <div
                class="ant-card-meta-detail"
              >
                <div
                  class="ant-card-meta-title"
                >
                  渐变色 Logo
                </div>
                <div
                  class="ant-card-meta-description"
                >
                  渐变色
                </div>
              </div>
            </div>
          </div>
          <ul
            class="ant-card-actions"
          >
            <li
              style="width: 33.333333333333336%;"
            >
              <span>
                <button
                  class="ant-btn ant-btn-link avx-asset-card-link"
                  type="button"
                >
                  <span>
                    Svg
                  </span>
                </button>
              </span>
            </li>
            <li
              style="width: 33.333333333333336%;"
            >
              <span>
                <button
                  class="ant-btn ant-btn-link avx-asset-card-link"
                  type="button"
                >
                  <span>
                    Png
                  </span>
                </button>
              </span>
            </li>
            <li
              style="width: 33.333333333333336%;"
            >
              <span>
                <button
                  class="ant-btn ant-btn-link ant-dropdown-trigger avx-asset-card-link"
                  type="button"
                >
                  <span
                    aria-label="ellipsis"
                    class="anticon anticon-ellipsis"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="ellipsis"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M176 511a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0z"
                      />
                    </svg>
                  </span>
                </button>
              </span>
            </li>
          </ul>
        </div>
      </div>
      <div
        class="avx-asset-card-wrapper"
      >
        <div
          class="ant-card avx-asset-card-item"
        >
          <div
            class="ant-card-cover"
          >
            <div
              class="avx-asset-card-image-ctn"
              style="background: black;"
            >
              <div
                class="avx-asset-card-image-type"
              >
                <img
                  alt="sketch"
                  height="18"
                  src="https://gw.alipayobjects.com/zos/antfincdn/lBMmJ5U0Pr/svg.svg"
                  width="18"
                />
              </div>
              <img
                alt="白色 Logo"
                class="avx-asset-card-image"
                src="https://gw.alipayobjects.com/zos/antfincdn/5qY87lPw9U/white-logo.svg"
                style="padding: 12px;"
              />
            </div>
          </div>
          <div
            class="ant-card-body"
          >
            <div
              class="ant-card-meta"
            >
              <div
                class="ant-card-meta-detail"
              >
                <div
                  class="ant-card-meta-title"
                >
                  白色 Logo
                </div>
                <div
                  class="ant-card-meta-description"
                >
                  暗色背景下使用
                </div>
              </div>
            </div>
          </div>
          <ul
            class="ant-card-actions"
          >
            <li
              style="width: 33.333333333333336%;"
            >
              <span>
                <button
                  class="ant-btn ant-btn-link avx-asset-card-link"
                  type="button"
                >
                  <span>
                    Svg
                  </span>
                </button>
              </span>
            </li>
            <li
              style="width: 33.333333333333336%;"
            >
              <span>
                <button
                  class="ant-btn ant-btn-link avx-asset-card-link"
                  type="button"
                >
                  <span>
                    Png
                  </span>
                </button>
              </span>
            </li>
            <li
              style="width: 33.333333333333336%;"
            >
              <span>
                <button
                  class="ant-btn ant-btn-link ant-dropdown-trigger avx-asset-card-link"
                  type="button"
                >
                  <span
                    aria-label="ellipsis"
                    class="anticon anticon-ellipsis"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="ellipsis"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M176 511a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0z"
                      />
                    </svg>
                  </span>
                </button>
              </span>
            </li>
          </ul>
        </div>
      </div>
      <canvas
        id="canvas"
        style="display: none;"
      />
    </div>
  </div>
</div>
`;

exports[`AssetGallery 图片源为 PNG 1`] = `
<div>
  <div>
    <div
      style="padding: 0px 8px; display: flex; justify-content: space-between; align-items: center;"
    >
      <div />
      <div
        class="ant-space ant-space-horizontal ant-space-align-center"
      >
        <div
          class="ant-space-item"
          style="margin-right: 8px;"
        >
          <div
            class="ant-space ant-space-horizontal ant-space-align-center"
          >
            <div
              class="ant-space-item"
              style="margin-right: 0px;"
            >
              <button
                class="ant-btn ant-btn-link ant-btn-icon-only"
                data-testid="masonry-icon"
                type="button"
              >
                <img
                  alt="瀑布流布局"
                  src="https://gw.alipayobjects.com/zos/antfincdn/gACoIFWH4G/masonry.svg"
                  style="cursor: pointer;"
                />
              </button>
            </div>
            <div
              class="ant-space-item"
            >
              <button
                class="ant-btn ant-btn-link ant-btn-icon-only"
                data-testid="grid-icon"
                type="button"
              >
                <img
                  alt="网格布局"
                  src="https://gw.alipayobjects.com/zos/antfincdn/sLiHETRbAt/grid.svg"
                  style="cursor: pointer;"
                />
              </button>
            </div>
          </div>
        </div>
        <div
          class="ant-space-item"
        >
          <div
            class="ant-slider ant-slider-horizontal"
            style="width: 100px;"
          >
            <div
              class="ant-slider-rail"
            />
            <div
              class="ant-slider-track"
              style="left: 0%; width: 0%;"
            />
            <div
              class="ant-slider-step"
            />
            <div
              aria-disabled="false"
              aria-valuemax="-1"
              aria-valuemin="-4"
              aria-valuenow="-4"
              class="ant-slider-handle"
              role="slider"
              style="left: 0%; transform: translateX(-50%);"
              tabindex="0"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="avx-asset-gallery-container avx-asset-gallery-masonry"
      style="column-count: 4;"
    >
      <div
        class="avx-asset-card-wrapper"
      >
        <div
          class="ant-card avx-asset-card-item"
        >
          <div
            class="ant-card-cover"
          >
            <div
              class="avx-asset-card-image-ctn"
            >
              <div
                class="avx-asset-card-image-type"
              >
                <img
                  alt="sketch"
                  height="18"
                  src="https://gw.alipayobjects.com/zos/antfincdn/wV6Zp%243hgH/img.svg"
                  width="18"
                />
              </div>
              <img
                alt="渐变色 Logo"
                class="avx-asset-card-image"
                src="https://gw.alipayobjects.com/zos/antfincdn/OuMB9liYZV/tupian%2525201.png"
                style="padding: 12px;"
              />
            </div>
          </div>
          <div
            class="ant-card-body"
          >
            <div
              class="ant-card-meta"
            >
              <div
                class="ant-card-meta-detail"
              >
                <div
                  class="ant-card-meta-title"
                >
                  渐变色 Logo
                </div>
                <div
                  class="ant-card-meta-description"
                >
                  渐变色
                </div>
              </div>
            </div>
          </div>
          <ul
            class="ant-card-actions"
          >
            <li
              style="width: 50%;"
            >
              <span>
                <button
                  class="ant-btn ant-btn-link avx-asset-card-link"
                  type="button"
                >
                  <span>
                    Png
                  </span>
                </button>
              </span>
            </li>
            <li
              style="width: 50%;"
            >
              <span>
                <button
                  class="ant-btn ant-btn-link ant-dropdown-trigger avx-asset-card-link"
                  type="button"
                >
                  <span
                    aria-label="ellipsis"
                    class="anticon anticon-ellipsis"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="ellipsis"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M176 511a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0z"
                      />
                    </svg>
                  </span>
                </button>
              </span>
            </li>
          </ul>
        </div>
      </div>
      <div
        class="avx-asset-card-wrapper"
      >
        <div
          class="ant-card avx-asset-card-item"
        >
          <div
            class="ant-card-cover"
          >
            <div
              class="avx-asset-card-image-ctn"
            >
              <div
                class="avx-asset-card-image-type"
              >
                <img
                  alt="sketch"
                  height="18"
                  src="https://gw.alipayobjects.com/zos/antfincdn/wV6Zp%243hgH/img.svg"
                  width="18"
                />
              </div>
              <img
                alt="黑色 Logo"
                class="avx-asset-card-image"
                src="https://gw.alipayobjects.com/zos/antfincdn/5vmPNr6Qqz/tupian%2525202.png"
                style="padding: 12px;"
              />
            </div>
          </div>
          <div
            class="ant-card-body"
          >
            <div
              class="ant-card-meta"
            >
              <div
                class="ant-card-meta-detail"
              >
                <div
                  class="ant-card-meta-title"
                >
                  黑色 Logo
                </div>
                <div
                  class="ant-card-meta-description"
                >
                  亮色背景下使用
                </div>
              </div>
            </div>
          </div>
          <ul
            class="ant-card-actions"
          >
            <li
              style="width: 50%;"
            >
              <span>
                <button
                  class="ant-btn ant-btn-link avx-asset-card-link"
                  type="button"
                >
                  <span>
                    Png
                  </span>
                </button>
              </span>
            </li>
            <li
              style="width: 50%;"
            >
              <span>
                <button
                  class="ant-btn ant-btn-link ant-dropdown-trigger avx-asset-card-link"
                  type="button"
                >
                  <span
                    aria-label="ellipsis"
                    class="anticon anticon-ellipsis"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="ellipsis"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M176 511a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0z"
                      />
                    </svg>
                  </span>
                </button>
              </span>
            </li>
          </ul>
        </div>
      </div>
      <canvas
        id="canvas"
        style="display: none;"
      />
    </div>
  </div>
</div>
`;

exports[`AssetGallery 默认状态 1`] = `
<div>
  <div>
    <div
      style="padding: 0px 8px; display: flex; justify-content: space-between; align-items: center;"
    >
      <div />
      <div
        class="ant-space ant-space-horizontal ant-space-align-center"
      >
        <div
          class="ant-space-item"
          style="margin-right: 8px;"
        >
          <div
            class="ant-space ant-space-horizontal ant-space-align-center"
          >
            <div
              class="ant-space-item"
              style="margin-right: 0px;"
            >
              <button
                class="ant-btn ant-btn-link ant-btn-icon-only"
                data-testid="masonry-icon"
                type="button"
              >
                <img
                  alt="瀑布流布局"
                  src="https://gw.alipayobjects.com/zos/antfincdn/gACoIFWH4G/masonry.svg"
                  style="cursor: pointer;"
                />
              </button>
            </div>
            <div
              class="ant-space-item"
            >
              <button
                class="ant-btn ant-btn-link ant-btn-icon-only"
                data-testid="grid-icon"
                type="button"
              >
                <img
                  alt="网格布局"
                  src="https://gw.alipayobjects.com/zos/antfincdn/sLiHETRbAt/grid.svg"
                  style="cursor: pointer;"
                />
              </button>
            </div>
          </div>
        </div>
        <div
          class="ant-space-item"
        >
          <div
            class="ant-slider ant-slider-horizontal"
            style="width: 100px;"
          >
            <div
              class="ant-slider-rail"
            />
            <div
              class="ant-slider-track"
              style="left: 0%; width: 0%;"
            />
            <div
              class="ant-slider-step"
            />
            <div
              aria-disabled="false"
              aria-valuemax="-1"
              aria-valuemin="-4"
              aria-valuenow="-4"
              class="ant-slider-handle"
              role="slider"
              style="left: 0%; transform: translateX(-50%);"
              tabindex="0"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="avx-asset-gallery-container avx-asset-gallery-masonry"
      style="column-count: 4;"
    >
      <canvas
        id="canvas"
        style="display: none;"
      />
    </div>
  </div>
</div>
`;
